# DroidShield

./: .gitignore  ARCHITECTURE.md  CHECKS_SEED_LIST.md  CONTRIBUTING.md  COT_PROMPT.md  DECISIONS.md  INTEGRATION.md  LICENSE  README.md  SERVER_DRIVEN_DECISIONS.md  build.gradle.kts  gradle.properties  jitpack.yml  settings.gradle.kts
docs/: DECISIONS.md  INTEGRATION.md  SERVER_DRIVEN_DECISIONS.md  SOURCES.md
droidshield-data-android/: OVERVIEW.md  build.gradle.kts
droidshield-data-android/src/main/: AndroidManifest.xml
droidshield-data-android/src/main/kotlin/dev/droidshield/data/: AndroidCheckContext.kt
droidshield-domain/: OVERVIEW.md  build.gradle.kts
droidshield-domain/src/main/kotlin/dev/droidshield/domain/: CheckContext.kt  CheckResult.kt  Severity.kt  TelemetryEvent.kt  TelemetrySink.kt  ThreatCategory.kt  ThreatCheck.kt  ThreatReporter.kt
droidshield-domain/src/test/kotlin/dev/droidshield/domain/: CheckResultTest.kt
droidshield-engine/: OVERVIEW.md  build.gradle.kts
droidshield-engine/src/main/kotlin/dev/droidshield/engine/: CheckOrder.kt  ThreatDetectionEngine.kt
droidshield-gradle-plugin/: OVERVIEW.md  build.gradle.kts  settings.gradle.kts
droidshield-native/: OVERVIEW.md  build.gradle.kts
droidshield-native/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
droidshield-native/src/main/kotlin/dev/droidshield/nativelayer/: NativeBridge.kt
droidshield-sdk/: OVERVIEW.md  build.gradle.kts  consumer-rules.pro
gradle/: libs.versions.toml
sample-app/: OVERVIEW.md  build.gradle.kts  settings.gradle.kts
sample-app/src/main/: AndroidManifest.xml
(+71 files in other folders)
